Colaboratory を使用して作成しました

--- a/setoda_note_ctf.ipynb
+++ b/setoda_note_ctf.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "setoda_note_ctf.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "1b_e65x4UsyKo-QoM_78L3izDDcxqk_x0",
       "authorship_tag": "ABX9TyNiGRoAfx/l2hBtWtZXIsYr",
       "include_colab_link": true
