Colaboratory を使用して作成しました

--- a/setoda_note_ctf.ipynb
+++ b/setoda_note_ctf.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "name": "setoda_note_ctf.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1b_e65x4UsyKo-QoM_78L3izDDcxqk_x0",
-      "authorship_tag": "ABX9TyNiGRoAfx/l2hBtWtZXIsYr",
+      "authorship_tag": "ABX9TyNLw7Z3OID5HZacSIBSBg7c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1547,6 +1546,80 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "gHTVWBFvwdTa"
+      },
+      "source": [
+        "##TimeLine"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w7VptqIdwjC7"
+      },
+      "source": [
+        "次の手順でやるのが簡単\n",
+        "\n",
+        ">DB Browser fo SQLite で開く\n",
+        "\n",
+        ">Activity tableのAppIDを”notepad.exe”でフィルター\n",
+        "\n",
+        ">ActivityTypeを”5”（または”６”）でフィルター\n",
+        "\n",
+        ">AppActivityID：メモ帳で開いたファイルの一覧？\n",
+        "\n",
+        ">ファイルの拡張子をとって繋げる\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jkcz8ofK31Bs"
+      },
+      "source": [
+        "せっかくなので、python＋sqlite3で同じことを目指す\n",
+        "\n",
+        ">\"notepad.exe\"　＝　PackageidHash：\"eUssiHYOx8gt4grLn60pEG2m1QnscYA3695n7jpHJwY=\"\n",
+        "\n",
+        ">"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5jKmi6zPw5xa",
+        "outputId": "98b44c95-130d-4993-b8aa-0287f2c5d48b"
+      },
+      "source": [
+        "import sqlite3\n",
+        "\n",
+        "conn = sqlite3.connect(\"/content/drive/MyDrive/setodanotectf/forensics/Timeline/ActivitiesCache.db\")\n",
+        "cur = conn.cursor()\n",
+        "\n",
+        "cur.execute('select AppActivityID from Activity where ActivityType = 5 and PackageidHash = \"eUssiHYOx8gt4grLn60pEG2m1QnscYA3695n7jpHJwY=\";')\n",
+        "\n",
+        "\n",
+        "for item in cur.fetchall():\n",
+        "  if not \"E:\\\\\" in item[0]: continue\n",
+        "  print(item[0].split(\"\\\\\")[-1].split(\".\")[0], end='')\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OKdammyFlagflag{Th3_Fu7Ure_1s_N0w}NiceTry"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "lr47WXu_NB2L"
       },
       "source": [
@@ -1758,7 +1831,7 @@
       "source": [
         "!pip install pycrypto"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1786,7 +1859,7 @@
       "source": [
         "from Crypto.Util.number import *"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1801,7 +1874,7 @@
         "e = 65537\n",
         "n = 13373801376856352919495636794117610920860037770702465464324474778341963699665011787021257\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1812,7 +1885,7 @@
       "source": [
         "d = inverse(e,(p-1)*(q-1))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1828,7 +1901,7 @@
         "m = pow(c, d, n)\n",
         "bytes.fromhex(hex(m)[2:])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
